--- a/collated/test/A0138516A.md
+++ b/collated/test/A0138516A.md
@@ -7,7 +7,7 @@ public class StorageCommandTest extends TaskListGuiTest {
 	private String defaultConfigFile = "TestConfig.json";
 	private String testFileName = "testTaskList.xml";
 
-	private Config Config = assertFilePathChange(defaultConfigFile);
+	private Config config = assertFilePathChange(defaultConfigFile);
 
 	@Test
 	// Change File Path
