--- a/collated/test/A0146840E.md
+++ b/collated/test/A0146840E.md
@@ -336,8 +336,8 @@ public class MarkCommandTest extends TaskListGuiTest {
         TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("list");
         
-        assertMarkSuccess(1, currentList[0], currentList);
-        assertMarkSuccess(1, currentList[1], currentList);     
+        assertMarkSuccess(1, currentList[0]);
+        assertMarkSuccess(1, currentList[1]);     
     }
 
     @Test
@@ -379,7 +379,7 @@ public class MarkCommandTest extends TaskListGuiTest {
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
     }
     
-    private void assertMarkSuccess(int index, TestTask taskToMark, TestTask... currentList) {
+    private void assertMarkSuccess(int index, TestTask taskToMark) {
         commandBox.runCommand("mark " + index);
         taskToMark.setCompleted(true);
         
@@ -401,8 +401,8 @@ public class UnmarkCommandTest extends TaskListGuiTest {
         commandBox.runCommand("mark " + 1);
         commandBox.runCommand("mark " + 1);
         
-        assertUnmarkSuccess(currentList.length, currentList[0], currentList);
-        assertUnmarkSuccess(currentList.length, currentList[1], currentList);
+        assertUnmarkSuccess(currentList.length, currentList[0]);
+        assertUnmarkSuccess(currentList.length, currentList[1]);
     }
 
     @Test
@@ -445,7 +445,7 @@ public class UnmarkCommandTest extends TaskListGuiTest {
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
     }
     
-    private void assertUnmarkSuccess(int index, TestTask taskToUnmark, TestTask... currentList) {
+    private void assertUnmarkSuccess(int index, TestTask taskToUnmark) {
         commandBox.runCommand("unmark " + index);
         taskToUnmark.setCompleted(false);
         
