--- a/collated/main/A0138516A.md
+++ b/collated/main/A0138516A.md
@@ -8,7 +8,7 @@ public class ChangePathEvent extends BaseEvent{
 	private String filepath;
 	
 	
-	public ChangePathEvent(String filepath){
+	public ChangePathEvent(String filepath) {
 		this.filepath = filepath;
 	}
 	
@@ -251,13 +251,13 @@ public class UndoCommand extends Command {
 ###### \java\seedu\tasklist\MainApp.java
 ``` java
     @Subscribe
-    public void changePathRequestEvent(ChangePathEvent event){
+    public void changePathRequestEvent(ChangePathEvent event) {
     	 logger.info(LogsCenter.getEventHandlingLogMessage(event));
     	 String previousFilePath = config.getTaskListFilePath();
     	 config.setTaskListFilePath(event.toString());
     	 try{
     		 ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
-    	 }catch (IOException e){
+    	 }catch (IOException e) {
     		 logger.warning("Error saving file to " + event.toString() + e);
 		}
     	 try {
@@ -299,9 +299,10 @@ public class UndoCommand extends Command {
 ``` java
     @Override
 	public void unDoDelete(int targetIndex, Task undoTask) throws TaskNotFoundException{
-    	taskList.insertTask(targetIndex, undoTask);
+    	int index = taskList.insertTask(targetIndex, undoTask);
     	updateFilteredTaskListToShowAll();
         indicateTaskListChanged();
+        indicateJumpToList(index);
     }
     
 ```
@@ -309,41 +310,46 @@ public class UndoCommand extends Command {
 ``` java
     @Override
   	public void unDoEdit(Task beforeEdit, Task afterEdit) throws TaskNotFoundException{
-    	taskList.replace(beforeEdit, afterEdit);
+    	int index = taskList.replace(beforeEdit, afterEdit);
     	updateFilteredTaskListToShowAll();
         indicateTaskListChanged();
+        indicateJumpToList(index);
     }
     
 ```
 ###### \java\seedu\tasklist\model\task\UniqueTaskList.java
 ``` java
-    public void insert(int targetIndex, Task undoTask) throws TaskNotFoundException{
+    public int insert(int targetIndex, Task undoTask) throws TaskNotFoundException{
     	internalList.add(targetIndex-1, undoTask);
+    	sort();
+    	return internalList.indexOf(undoTask);
 	}
     
 ```
 ###### \java\seedu\tasklist\model\task\UniqueTaskList.java
 ``` java
-    public void replace(Task beforeEdit, Task afterEdit) throws TaskNotFoundException{
+    public int replace(Task beforeEdit, Task afterEdit) throws TaskNotFoundException{
 		int indexToReplace = internalList.indexOf(afterEdit);
-		internalList.set(indexToReplace, beforeEdit);		
+		internalList.set(indexToReplace, beforeEdit);	
+		sort();
+		return internalList.indexOf(beforeEdit);
 	}
 
 ```
 ###### \java\seedu\tasklist\model\TaskList.java
 ``` java
-    public void insertTask(int targetIndex, Task undoTask) throws TaskNotFoundException{
+    public int insertTask(int targetIndex, Task undoTask) throws TaskNotFoundException{
     	syncTagsWithMasterList(undoTask);
-    	task.insert(targetIndex,undoTask);
+    	return task.insert(targetIndex,undoTask);
     	
 	}
     
 ```
 ###### \java\seedu\tasklist\model\TaskList.java
 ``` java
-    public void replace(Task beforeEdit, Task afterEdit) throws TaskNotFoundException {
+    public int replace(Task beforeEdit, Task afterEdit) throws TaskNotFoundException {
     	syncTagsWithMasterList(afterEdit);
-    	task.replace(beforeEdit,afterEdit);
+    	return task.replace(beforeEdit,afterEdit);
 		
 	}
 ```
