--- a/collated/main/A0140019W.md
+++ b/collated/main/A0140019W.md
@@ -314,8 +314,8 @@ public class Task implements ReadOnlyTask {
         this.isOverdue = isOverdue;
         this.isFloating = isFloating;
         
-//        initializeOverdue();
-//        initializeFloating();
+        initializeOverdue();
+        initializeFloating();
     }
 
     /**
@@ -521,7 +521,7 @@ public class Title {
 ```
 ###### \java\seedu\tasklist\ui\StatusBarFooter.java
 ``` java
-    private void addProgressBar(ObservableList<ReadOnlyTask> taskList) {
+    private void addProgressBar(List<ReadOnlyTask> taskList) {
         text = new Text("");
         text.setFont(Font.font("Arial", 12));
         
@@ -534,15 +534,15 @@ public class Title {
 ```
 ###### \java\seedu\tasklist\ui\StatusBarFooter.java
 ``` java
-    private void progressBarStatus(List<ReadOnlyTask> tasklist) {
+    private void progressBarStatus(List<ReadOnlyTask> taskList) {
         double count = 0;
-        for (ReadOnlyTask readOnlyTask : tasklist) {
+        for (ReadOnlyTask readOnlyTask : taskList) {
             if(readOnlyTask.isCompleted()) {
                 count++;
             }
         }
-        text.setText((int)count + " / " + tasklist.size());
-        progressbar.setProgress(count/tasklist.size());
+        text.setText((int)count + " / " + taskList.size());
+        progressbar.setProgress(count/taskList.size());
     }
 ```
 ###### \resources\view\Extensions.css
