--- a/collated/test/A0146840E.md
+++ b/collated/test/A0146840E.md
@@ -23,7 +23,7 @@ public class EditCommandTest extends TaskListGuiTest {
         assertEditEndTimeSuccess(6, "1234", currentList[5]);
         
         //edit everything
-        assertEditSuccess(7, "title", "description", "11012014 1100", "11012014 1200", currentList[6]); 
+        assertEditSuccess(7, "title", "description", "11012214 1100", "11012214 1200", currentList[6]); 
     }
 
     @Test
@@ -31,7 +31,7 @@ public class EditCommandTest extends TaskListGuiTest {
         TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("list");
         
-        assertEditSuccess(7, "title", "description", "11012014 1100", "11012014 1200", currentList[6]);
+        assertEditSuccess(7, "title", "description", "11012214 1100", "11012214 1200", currentList[6]);
         
         commandBox.runCommand("edit 1 s/01019999");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
@@ -44,18 +44,18 @@ public class EditCommandTest extends TaskListGuiTest {
         commandBox.runCommand("edit 7 e/1100");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
         
-        assertEditSuccess(7, "title", "description", "10012014 2345", "11012014 2345", currentList[6]);
+        assertEditSuccess(7, "title", "description", "10012214 2345", "11012214 2345", currentList[6]);
         
-        commandBox.runCommand("edit 7 s/11012014");
+        commandBox.runCommand("edit 7 s/11012214");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
-        commandBox.runCommand("edit 7 e/10012014");
+        commandBox.runCommand("edit 7 e/10012214");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
         
-        assertEditSuccess(7, "title", "description", "10012014 0000", "11012014 2359", currentList[6]);
+        assertEditSuccess(7, "title", "description", "10012214 0000", "11012214 2359", currentList[6]);
         
-        commandBox.runCommand("edit 7 s/11012014 2359");
+        commandBox.runCommand("edit 7 s/11012214 2359");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
-        commandBox.runCommand("edit 7 e/10012014 0000");
+        commandBox.runCommand("edit 7 e/10012214 0000");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
     }
     
@@ -230,7 +230,7 @@ public class ListCommandTest extends TaskListGuiTest {
         assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS, "completed "));
         assertListSize(1);
         
-        commandBox.runCommand(TypicalTestTasks.task9.getAddCommand());        
+        commandBox.runCommand("add overdue e/11112011");        
         commandBox.runCommand("list overdue");
         assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS, "overdue "));
         assertListSize(1);
@@ -239,14 +239,20 @@ public class ListCommandTest extends TaskListGuiTest {
         commandBox.runCommand("list floating");
         assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS, "floating "));
         assertListSize(1);
+    }
+    
+    @Test
+    public void listTasks_nonEmptyList_noTaskResultMessage() {
+        commandBox.runCommand("list");
+        assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS, ""));
         
         commandBox.runCommand("list today");
-        assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_2, "today"));
-        assertListSize(2);
+        assertResultMessage(ListCommand.MESSAGE_NO_TASK_TODAY);
+        assertListSize(0);
         
         commandBox.runCommand("list week");
-        assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_2, "the week"));
-        assertListSize(2);
+        assertResultMessage(ListCommand.MESSAGE_NO_TASK_WEEK);
+        assertListSize(0);
     }
     
     @Test
@@ -334,9 +340,11 @@ public class MarkCommandTest extends TaskListGuiTest {
     @Test
     public void markTask_nonEmptyList_successResultMessage() {
         TestTask[] currentList = td.getTypicalTasks();
-        commandBox.runCommand("list");
         
+        commandBox.runCommand("list");
         assertMarkSuccess(1, currentList[0]);
+        
+        commandBox.runCommand("list");
         assertMarkSuccess(1, currentList[1]);     
     }
 
@@ -353,11 +361,11 @@ public class MarkCommandTest extends TaskListGuiTest {
 
     @Test
     public void markTask_nonEmptyList_markedTaskResultMessage() {
-        TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("list");
+        commandBox.runCommand("mark 1");
         
-        commandBox.runCommand("mark " + (currentList.length - 1));
-        commandBox.runCommand("mark " + (currentList.length));
+        commandBox.runCommand("list completed");
+        commandBox.runCommand("mark 1");
         assertResultMessage(MarkCommand.MESSAGE_MARKED_TASK);
     }
 
@@ -384,9 +392,10 @@ public class MarkCommandTest extends TaskListGuiTest {
         taskToMark.setCompleted(true);
         
         //confirm the new card contains the right data
+        assertResultMessage("Task marked: " + taskToMark.getAsText());
+        commandBox.runCommand("list completed");
         TaskCardHandle markedCard = taskListPanel.navigateToTask(taskToMark.getTitle().fullTitle);
         assertMarked(taskToMark, markedCard);
-        assertResultMessage("Task marked: " + taskToMark.getAsText());
     }
 }
 ```
@@ -397,12 +406,14 @@ public class UnmarkCommandTest extends TaskListGuiTest {
     @Test
     public void unmarkTask_nonEmptyList_successResultMessage() {
         TestTask[] currentList = td.getTypicalTasks();
-        commandBox.runCommand("list");
-        commandBox.runCommand("mark " + 1);
-        commandBox.runCommand("mark " + 1);
         
-        assertUnmarkSuccess(currentList.length, currentList[0]);
-        assertUnmarkSuccess(currentList.length, currentList[1]);
+        commandBox.runCommand("list");
+        commandBox.runCommand("mark 1");
+        assertUnmarkSuccess(1, currentList[0]);
+        
+        commandBox.runCommand("list");
+        commandBox.runCommand("mark 7");
+        assertUnmarkSuccess(1, currentList[6]);
     }
 
     @Test
@@ -446,13 +457,15 @@ public class UnmarkCommandTest extends TaskListGuiTest {
     }
     
     private void assertUnmarkSuccess(int index, TestTask taskToUnmark) {
+        commandBox.runCommand("list completed");
         commandBox.runCommand("unmark " + index);
         taskToUnmark.setCompleted(false);
         
         //confirm the new card contains the right data
+        assertResultMessage("Task unmarked: " + taskToUnmark.getAsText());
+        commandBox.runCommand("list");
         TaskCardHandle markedCard = taskListPanel.navigateToTask(taskToUnmark.getTitle().fullTitle);
         assertUnmarked(taskToUnmark, markedCard);
-        assertResultMessage("Task unmarked: " + taskToUnmark.getAsText());
     }
 }
 ```
@@ -570,30 +583,30 @@ public class TypicalTestTasks {
 
     public TypicalTestTasks() {
         try {
-            task1 = new TaskBuilder().withTitle("Exam Revision").withEndDateTime("02022002")
+            task1 = new TaskBuilder().withTitle("Exam Revision").withEndDateTime("02022202")
                     .withDescription("studying in NUS").withStartDateTime("01012001").withTags("urgent").build();
-            task2 = new TaskBuilder().withTitle("Upcoming Quiz").withEndDateTime("04042004 1700")
+            task2 = new TaskBuilder().withTitle("Upcoming Quiz").withEndDateTime("04042204 1700")
                     .withDescription("have a hard time in comsci").withStartDateTime("30032003 1300")
                     .withTags("notime", "toughlife").build();
             task3 = new TaskBuilder().withTitle("Competition 2006").withDescription("train harder")
-                    .withStartDateTime("05052005").withEndDateTime("06062006").build();
-            task4 = new TaskBuilder().withTitle("Test Failure").withStartDateTime("")
-                    .withDescription("study harder").withEndDateTime("").build();
+                    .withStartDateTime("05052005").withEndDateTime("06062206").build();
+            task4 = new TaskBuilder().withTitle("Test Failure").withStartDateTime("05052007")
+                    .withDescription("study harder").withEndDateTime("06062207").build();
             task5 = new TaskBuilder().withTitle("Tutorial 1").withStartDateTime("01012001")
-                    .withDescription("refer to lecture notes").withEndDateTime("10042012").build();
+                    .withDescription("refer to lecture notes").withEndDateTime("10042212").build();
             task6 = new TaskBuilder().withTitle("Quiz Failure").withStartDateTime("03032003")
-                    .withDescription("keep trying").withEndDateTime("05012013").build();
+                    .withDescription("keep trying").withEndDateTime("05012213").build();
             task7 = new TaskBuilder().withTitle("Task Name").withStartDateTime("04042004")
-                    .withDescription("Description Name").withEndDateTime("05062014").build();
+                    .withDescription("Description Name").withEndDateTime("05062214").build();
 
             // Manually added
             task8 = new TaskBuilder().withTitle("Revision").withStartDateTime("05062001").withDescription("dont stop studying")
-                    .withEndDateTime("01102014").build();
+                    .withEndDateTime("01102214").build();
             task9 = new TaskBuilder().withTitle("Hard Labor").withStartDateTime("07062001 2359")
-                    .withDescription("need to get strong").withEndDateTime("03072015 0000").build();
+                    .withDescription("need to get strong").withEndDateTime("03072215 0000").build();
             
-            task10 = new TaskBuilder().withTitle("Order pizza").withStartDateTime("05112016 1030")
-                    .withDescription("need order two large pizza").withEndDateTime("05112016 1100").build();
+            task10 = new TaskBuilder().withTitle("Order pizza").withStartDateTime("05112216 1030")
+                    .withDescription("need order two large pizza").withEndDateTime("05112216 1100").build();
             
         } catch (IllegalValueException e) {
             e.printStackTrace();
