--- a/collated/test/A0153837X.md
+++ b/collated/test/A0153837X.md
@@ -5,20 +5,20 @@ public class TimeCommandTest extends TaskListGuiTest{
 	
 	@Test
     public void time(){
-	    commandBox.runCommand("list");
-	    
-		//Overdue Task
+	    //Overdue Task
+	    commandBox.runCommand("add overdue e/11112011");
+	    commandBox.runCommand("list overdue");
 		commandBox.runCommand("time 1");
         assertResultMessage("Task is overdue!");
 		
         //Task with endTime but without endDate
         commandBox.runCommand("add meeting e/2300");
-		commandBox.runCommand("time 8");
+		commandBox.runCommand("time 9");
         assertResultMessage("Task has no date time specification!");
         
         //Task without endDate and endTime
         commandBox.runCommand("add meeting");
-		commandBox.runCommand("time 9");
+		commandBox.runCommand("time 10");
         assertResultMessage("Task has no date time specification!");
         
 	}
