--- a/collated/main/A0146840E.md
+++ b/collated/main/A0146840E.md
@@ -480,7 +480,7 @@ public class MarkCommand extends CommandUndoExtension {
     @Override
     public Command prepare(String args) {
         Optional<Integer> index = parseIndex(args);
-        if(!index.isPresent()){
+        if(!index.isPresent()) {
             return new IncorrectCommand(
                     String.format(MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_USAGE));
         }
@@ -500,7 +500,7 @@ public class MarkCommand extends CommandUndoExtension {
     @Override
     public Command prepare(String args) {
         Optional<Integer> index = parseIndex(args);
-        if(!index.isPresent()){
+        if(!index.isPresent()) {
             return new IncorrectCommand(
                     String.format(MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_USAGE));
         }
@@ -575,7 +575,7 @@ public class UnmarkCommand extends CommandUndoExtension {
     @Override
     public Command prepare(String args) {
         Optional<Integer> index = parseIndex(args);
-        if(!index.isPresent()){
+        if(!index.isPresent()) {
             return new IncorrectCommand(
                     String.format(MESSAGE_INVALID_COMMAND_FORMAT, UnmarkCommand.MESSAGE_USAGE));
         }
@@ -593,6 +593,8 @@ public class UnmarkCommand extends CommandUndoExtension {
     /** Returns the weekly filtered list of tasks */
     ObservableList<ReadOnlyTask> getMainFilteredTaskList();
 
+    /** Returns the entire list of tasks */
+    List<ReadOnlyTask> getTaskList();
 }
 ```
 ###### \java\seedu\tasklist\logic\LogicManager.java
@@ -605,6 +607,11 @@ public class UnmarkCommand extends CommandUndoExtension {
     @Override
     public ObservableList<ReadOnlyTask> getMainFilteredTaskList() {
         return model.getMainFilteredTaskList();
+    }
+
+    @Override
+    public List<ReadOnlyTask> getTaskList() {
+        return model.getTaskList().getTaskList();
     }
 
 }
@@ -662,7 +669,7 @@ public interface CommandParser {
         }
 
         String index = matcher.group("targetIndex");
-        if(!StringUtil.isUnsignedInteger(index)){
+        if(!StringUtil.isUnsignedInteger(index)) {
             return Optional.empty();
         }
         return Optional.of(Integer.parseInt(index));
@@ -762,6 +769,43 @@ public class Parser {
 ```
 ###### \java\seedu\tasklist\model\ModelManager.java
 ``` java
+    /**
+     * Initializes a ModelManager with the given TaskList
+     * TaskList and its variables should not be null
+     */
+    public ModelManager(TaskList src, UserPrefs userPrefs) {
+        super();
+        assert src != null;
+        assert userPrefs != null;
+
+        logger.fine("Initializing with task list: " + src + " and user prefs " + userPrefs);
+
+        taskList = new TaskList(src);
+        filteredTask = new FilteredList<>(taskList.getTask());
+        mainFilteredTaskList = new FilteredList<>(taskList.getTask().filtered(t -> t.isOverdueAndFloating()));
+        
+        updateFilteredTaskList("week");
+    }
+
+```
+###### \java\seedu\tasklist\model\ModelManager.java
+``` java
+    public ModelManager(ReadOnlyTaskList initialData, UserPrefs userPrefs) {
+        taskList = new TaskList(initialData);
+        filteredTask = new FilteredList<>(taskList.getTask());
+        mainFilteredTaskList = new FilteredList<>(taskList.getTask().filtered(t -> t.isOverdueAndFloating()));
+        
+        updateFilteredTaskList("week");
+    }
+
+```
+###### \java\seedu\tasklist\model\ModelManager.java
+``` java
+    /** Raises an event to focus on model */
+    private void indicateJumpToList(int index) {
+        raise(new JumpToListRequestEvent(index));
+    }
+    
     @Override
     public void markTask(ReadOnlyTask target) throws TaskNotFoundException, TaskCompletionException {
         taskList.markTask(target);
@@ -779,16 +823,17 @@ public class Parser {
 ``` java
     @Override
     public void editTask(Task taskToEdit, ReadOnlyTask target) throws TaskNotFoundException {
-        taskList.editTask(taskToEdit, target);
+        int index = taskList.editTask(taskToEdit, target);
         updateFilteredTaskListToShowAll();
         indicateTaskListChanged();
+        indicateJumpToList(index);
     }
     
 ```
 ###### \java\seedu\tasklist\model\ModelManager.java
 ``` java
     @Override
-    public int updateFilteredTaskList(String status){
+    public int updateFilteredTaskList(String status) {
         updateFilteredTaskList(new PredicateExpression(new TaskStatusQualifier(status)));
         return filteredTask.size();
     }
@@ -819,9 +864,11 @@ public class Parser {
             } else if (status.contains("isFloating")) {
                 return task.isFloating() && !task.isCompleted();
             } else if (status.contains("today")) {
-                return task.isOverdue() && !task.isCompleted() || !task.isCompleted() && task.getEndDateTime().isDateEqualCurrentDate() || task.isFloating();
+                return !task.isCompleted() && task.getEndDateTime().isDateEqualCurrentDate();
             } else if (status.contains("week")) {
-                return task.isOverdue() && !task.isCompleted() || !task.isCompleted() && task.getEndDateTime().isDateEqualCurrentDateTillUpcomingWeek() || task.isFloating();
+                return !task.isCompleted() && task.getEndDateTime().isDateEqualCurrentDateTillUpcomingWeek();
+            } else if (status.contains("all")) {
+                return !task.isCompleted();
             } else {
                 return false;
             }
@@ -1051,6 +1098,10 @@ public interface DateTimeComparator {
         }
     }
     
+    public boolean isOverdueAndFloating() {
+        return !isCompleted() && isOverdue() || !isCompleted() && isFloating();
+    }
+    
 ```
 ###### \java\seedu\tasklist\model\task\UniqueTaskList.java
 ``` java
@@ -1064,11 +1115,26 @@ public interface DateTimeComparator {
         List<Task> floatingList = internalList.stream().filter(t -> t.isFloating()).collect(Collectors.toList());
         internalList.removeAll(floatingList);
         
+        //Sort task without end date time to the bottom, and those with end date time in ascending order
         internalList.sort(new Comparator<Task>() {
             @Override
             public int compare(Task t1, Task t2) {
-                if (!t1.getEndDateTime().isDateEmpty() && !t2.getEndDateTime().isDateEmpty() 
-                        && t1.getEndDateTime().isDateTimeAfter(t2.getEndDateTime())) {
+                if (t1.getEndDateTime().isDateEmpty()
+                    || !t1.getEndDateTime().isDateEmpty() && !t2.getEndDateTime().isDateEmpty() 
+                    && t1.getEndDateTime().isDateTimeAfter(t2.getEndDateTime())) {
+                    return 1;
+                } else {
+                    return 0;
+                } 
+            }
+        });
+        
+        //Sort task without end date time in ascending order according to its start date time
+        internalList.sort(new Comparator<Task>() {
+            @Override
+            public int compare(Task t1, Task t2) {
+                if (t1.getEndDateTime().isDateEmpty() && t2.getEndDateTime().isDateEmpty() 
+                    && t1.getStartDateTime().isDateTimeAfter(t2.getStartDateTime())) {
                     return 1;
                 } else {
                     return 0;
@@ -1088,7 +1154,7 @@ public interface DateTimeComparator {
      *
      * @throws TaskNotFoundException if no such task could be found in the list.
      */
-    public void edit(Task taskToEdit, ReadOnlyTask toEdit) throws TaskNotFoundException {
+    public int edit(Task taskToEdit, ReadOnlyTask toEdit) throws TaskNotFoundException {
         assert toEdit != null;
         assert taskToEdit != null;
         final int notFoundInList = -1;
@@ -1099,6 +1165,7 @@ public interface DateTimeComparator {
         }
         internalList.set(index, taskToEdit);
         sort();
+        return internalList.indexOf(taskToEdit);
     }
     
 ```
@@ -1162,11 +1229,12 @@ public interface DateTimeComparator {
      * Also checks the new task's tags and updates {@link #tags} with any new tags found,
      * and updates the Tag objects in the task to point to those in {@link #tags}.
      * 
+     * @return index of the task in the task list
      * @throws TaskNotFoundException if task does not exist.
      */
-    public void editTask(Task taskToEdit, ReadOnlyTask key) throws TaskNotFoundException {
+    public int editTask(Task taskToEdit, ReadOnlyTask key) throws TaskNotFoundException {
         syncTagsWithMasterList(taskToEdit);
-        task.edit(taskToEdit, key);
+        return task.edit(taskToEdit, key);
     }
 
     /**
@@ -1340,7 +1408,7 @@ public class XmlAdaptedTask {
         mainTaskListPanel = TaskListPanel.load(primaryStage, mainTaskListPanelPlaceholder, logic.getMainFilteredTaskList(), TaskListPanel.Type.MAIN_TASKLIST);
         filteredTaskListPanel = TaskListPanel.load(primaryStage, getTaskListPlaceholder(), logic.getFilteredTaskList(), TaskListPanel.Type.FILTERED_TASKLIST);
         resultDisplay = ResultDisplay.load(primaryStage, getResultDisplayPlaceholder());
-        statusBarFooter = StatusBarFooter.load(primaryStage, getStatusbarPlaceholder(), config.getTaskListFilePath(), logic.getMainFilteredTaskList());
+        statusBarFooter = StatusBarFooter.load(primaryStage, getStatusbarPlaceholder(), config.getTaskListFilePath(), logic.getTaskList());
         commandBox = CommandBox.load(primaryStage, getCommandBoxPlaceholder(), resultDisplay, logic);
     }
 
@@ -1477,7 +1545,7 @@ public class XmlAdaptedTask {
     private void initializeDateTime() {
         startDateTime.setText("Start:  " + task.getStartDateTime().toString().replaceAll(" ", "    Time:  "));
         
-        if (task.getStartDateTime().toString().isEmpty() || (isNotRequired && task.isCompleted())) {
+        if (task.getStartDateTime().toString().isEmpty() || isNotRequired) {
             startDateTime.setManaged(false);
         } else {
             startDateTime.setManaged(true);
@@ -1485,7 +1553,7 @@ public class XmlAdaptedTask {
         
         endDateTime.setText("End:    " + task.getEndDateTime().toString().replaceAll(" ", "    Time:  "));
         
-        if(task.getEndDateTime().toString().isEmpty() || (isNotRequired && task.isCompleted())) {
+        if(task.getEndDateTime().toString().isEmpty() || isNotRequired) {
             endDateTime.setManaged(false);
         } else {
             endDateTime.setManaged(true);
@@ -1506,7 +1574,7 @@ public class XmlAdaptedTask {
             cardPane.setStyle(FX_BACKGROUND_PALE_GREEN);
         } else if (task.isFloating()) {
             cardPane.setStyle(FX_BACKGROUND_PALE_YELLOW);
-        } else if (task.isOverdue()){
+        } else if (task.isOverdue()) {
             cardPane.setStyle(FX_BACKGROUND_PALE_RED);
         } else {
             cardPane.setStyle(FX_BACKGROUND_WHITE);
@@ -1554,15 +1622,10 @@ public class XmlAdaptedTask {
             if (empty || task == null ) {
                 setGraphic(null);
                 setText(null);
-            } else if (type == TaskListPanel.Type.FILTERED_TASKLIST){
+            } else if (type == TaskListPanel.Type.FILTERED_TASKLIST) {
                 setGraphic(TaskCard.load(task, getIndex() + 1).getLayout());
-            } else if (type == TaskListPanel.Type.MAIN_TASKLIST){
-                if (task.isCompleted()) {
-                    setGraphic(null);
-                    setText(null);
-                } else {
-                    setGraphic(TaskCard.load(task, -1).getLayout());
-                }
+            } else if (type == TaskListPanel.Type.MAIN_TASKLIST) {
+                setGraphic(TaskCard.load(task, -1).getLayout());
             }
         }
     }
