--- a/collated/docs/A0140019W.md
+++ b/collated/docs/A0140019W.md
@@ -8,7 +8,7 @@
 * Features implemented:
    * [Add Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#adding-a-task--add)
    * [Select Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#select-a-task--select)
-* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0140019W.md)][[test code](A0140019W.md)][[docs](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/docs/A0140019W.md)]
+* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0140019W.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/test/A0140019W.md)][[docs](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/docs/A0140019W.md)]
 * Other major contributions:
   * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2)
 
@@ -66,14 +66,14 @@ interface and exposes its functionality using the `LogicManager.java` class.<br>
 <img src="images/LogicClassDiagram.png" width="900"/> <br><br><br>
 
 
+### Events-Driven nature of the design 
 
 
-#### Events-Driven nature of the design 
-
-
-
+###Delete Command
 The _Sequence Diagram_ below shows how the components interact for the scenario where the user issues the
 command `delete 1`.
+
+
 <img src="images\SDforDeleteTask.png" width="800">
 
 
@@ -85,13 +85,89 @@ command `delete 1`.
 
 The diagram below shows how the `EventsCenter` reacts to that event, which eventually results in the updates
 being saved to the hard disk and the status bar of the UI being updated to reflect the 'Last Updated' time. <br>
-<img src="images\SDforDeleteTaskEventHandling.png" width="800">
+<img src="images\SDforDeleteTaskEventHandling.PNG" width="800">
 
 
 
 
 > Note how the event is propagated through the `EventsCenter` to the `Storage` and `UI` without `Model` having
   to be coupled to either of them. This is an example of how this Event Driven approach helps us reduce direct coupling between components.
+
+
+###Add Command
+The Sequence Diagram below shows how the components interact for the scenario where the user issues the command  `add CS2103`.
+
+
+<img src="images\addSequence.png" width="800">
+
+
+
+The diagram below shows how the `EventsCenter` reacts to that event, which eventually results in the updates
+being saved to the hard disk and the status bar of the UI being updated to reflect the 'Last Updated' time. <br>
+<img src="images\addSequenceEvent.png" width="800">
+
+
+
+
+###Mark/Unmark Command
+The _Sequence Diagram_ below shows how the components interact for the scenario where the user issues the
+command `mark 1/unmark 1`.
+
+
+<img src="images\markunmarkSequence.png" width="800">
+
+
+The diagram below shows how the `EventsCenter` reacts to that event, which eventually results in the updates
+being saved to the hard disk and the status bar of the UI being updated to reflect the 'Last Updated' time. <br>
+<img src="images\markunmarkEventSequence.png" width="800">
+
+
+###Storage Command
+The _Sequence Diagram_ below shows how the components interact for the scenario where the user issues the
+command `storage docs/tasklist.xml`.
+
+
+<img src="images\storageSequence.png" width="800">
+
+The diagram below shows how the `EventsCenter` reacts to that event, which eventually results in the updates
+being saved to the hard disk and the status bar of the UI being updated to reflect the 'Last Updated' time. <br>
+<img src="images\storageSequenceEvent.png" width="800">
+
+
+###Select Command
+
+
+The Sequence Diagram below shows how the components interact for the scenario where the user issues the command  `select 1`.
+
+
+<img src="images\SelectEventSequence.png" width="800">
+
+
+###Exit Command
+
+The Sequence Diagram below shows how the components interact for the scenario where the user issues the command  `exit`.
+
+
+<img src="images\exitSequence.png" width="800">
+
+
+
+The sections below give more details of each component.
+
+
+###Help Command
+The Sequence Diagram below shows how the components interact for the scenario where the user issues the command  `help`.
+
+
+<img src="images\HelpSequence.png" width="800">
+
+
+###Invalid Command
+The Sequence Diagram below shows how the components interact for the scenario where the user issues the command  `adds CS2103`.
+
+
+<img src="images\InvalidCommandSequence.png" width="800">
+
 
 
 
@@ -157,7 +233,17 @@ Given below is the Sequence Diagram for interactions within the `Logic` componen
  API call.<br>
 <img src="images/DeleteTaskSdForLogic.png" width="800"><br>
 
+Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("add CS2103")`
+ API call.<br>
+<img src="images/addTaskSdForLogic.png" width="800"><br>
 
+Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("mark 1")`
+ API call.<br>
+<img src="images/markTaskSdForLogic.png" width="800"><br>
+
+Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("clear")`
+ API call.<br>
+<img src="images/clearTaskSdForLogic.png" width="800"><br>
 
 
 ### Model component
@@ -227,7 +313,7 @@ Classes used by multiple components are in the `seedu.tasklist.commons` package.
 > * Words in `UPPER_CASE` are the parameters.
 > * Items in `SQUARE_BRACKETS` are optional.
 > * Items with `...` after them can have multiple instances.
-> * Order of parameters are fixed. 
+> * Order of parameters are fixed.
 
 
 <br>
@@ -238,7 +324,7 @@ Format: `help`
 
 
 > Help is also shown if you press <kbd>F1</kbd>
- 
+
 <br>
 ### Adding a task : `add`
 If you want to add the a task to the TaskList, here are the format to follow<br>
@@ -248,7 +334,7 @@ Format: `add TITLE [d/DETAILS] [s/START DATE TIME] [e/END DATE TIME] [t/TAG]...`
 > Title, details and tags are alphanumeric. Date and time are numeric.
 >
 > Date and time is in 24hr format : `DDMMYY HHMM`
-> 
+>
 > Tasks can have any number of tags (including 0)
 >
 > Floating tasks can be added without any date and time
@@ -256,15 +342,15 @@ Format: `add TITLE [d/DETAILS] [s/START DATE TIME] [e/END DATE TIME] [t/TAG]...`
 
 
 
-Examples: 
+Examples:
 * `add CS1020 Tutorial d/many questions e/05102016 1200  t/needhelp`
 * `add Meeting d/for project s/05102016 1200 e/05102016 1400 t/priority1`
 * `add CS1010 Take home lab d/hard to do s/05102016 1200`
 * `add CS2103 Project d/hard to do`
 * `add CS1231 Mid-Term Test`
+
+
 <br>
-
-
 ### Listing tasks : `list`
 This command help you to lists the stipulated tasks in the task list <br>
 Format: `list [PARAMETERS]`
@@ -303,7 +389,7 @@ Format: `find KEYWORD [MORE_KEYWORDS]`
 
 
 
-Examples: 
+Examples:
 * `find cs2103`<br>
   Display tasks containing `CS2103` and `cs2103`
 * `find cs1010 15 2016`<br>
@@ -321,15 +407,15 @@ Format: `storage FILEPATH`
 
 
 > Task list data are saved in a file called `data\tasklist.xml` in the root folder by default.
-> 
+>
 > The file name must end in `.xml` for it to be acceptable to the program.
 >
 > `Note`: The previous storage file will be deleted.
-> 
+>
 > Irreversible with `undo`
 
 
-Example: 
+Example:
 * `storage \folder\file.xml` <br>
   Storage file location has been changed to `\folder\file.xml`.
 * `storage \data\newtasklist.xml` <br>
@@ -368,18 +454,18 @@ Format: `delete INDEX`
 
 
 
-> Deletes the task at the specified `INDEX`. 
+> Deletes the task at the specified `INDEX`.
 > The index refers to the index number shown in the most recent listing.
 > The index **must be a positive integer** 1, 2, 3, ...
 
 
 
 
-Examples: 
+Examples:
 * `list`<br>
   `delete 2`<br>
   Deletes the 2nd task in the task list.
-* `find cs2103`<br> 
+* `find cs2103`<br>
   `delete 1`<br>
   Deletes the 1st task in the results of the `find` command.
 
@@ -399,11 +485,11 @@ Format: `select INDEX`
 
 
 
-Examples: 
+Examples:
 * `list`<br>
   `select 2`<br>
   Selects the 2nd task in the task list.
-* `find CS2103` <br> 
+* `find CS2103` <br>
   `select 1`<br>
   Selects the 1st task in the results of the `find` command.
 
