--- a/collated/docs/A0146840E.md
+++ b/collated/docs/A0146840E.md
@@ -89,7 +89,7 @@ Priority | As a ... | I want to ... | So that I can...
 
 
 
-# Survival Guide
+# User Guide
 <br>
 
 
@@ -134,7 +134,7 @@ Priority | As a ... | I want to ... | So that I can...
 
 
 0. Ensure that you have installed Java version `1.8.0_60` or later on your computer.<br>
-> This program will not work with earlier versions of java including java 8. 
+> This program will not work with earlier versions of java including java 8.
 
 
 
