--- a/collated/docs/A0153837X.md
+++ b/collated/docs/A0153837X.md
@@ -6,7 +6,7 @@
 * Components in charge of: [Model](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/DeveloperGuide.md#model-component)
 * Aspects/tools in charge of: Git, Code Quality
 * Features implemented:
-   * [Time Command] (https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837X.md)
+   * [Time Command] (https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#check-the-time-remaining--time)
    * [Today Command (unused)](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837Xunused.md)
 * Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837X.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/test/A0153837X.md)][[docs](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/docs/A0153837X.md)]
 
@@ -78,13 +78,13 @@
 ### Check the time remaining : `time`
 Gives the time remaining for a task (in days and hours) at the specified ‘INDEX’.<br>
 Format: `time INDEX`
- 
- 
+
+
  > Gives the time remaining to the deadline/ event <br>
  > The index refers to the index number shown in the most recent listing.<br>
  > The index **must be a positive integer** 1, 2, 3, ...
- 
- 
+
+
  Examples:
  * `list`<br>
    `time 1`<br>
