--- a/collated/main/A0146840E.md
+++ b/collated/main/A0146840E.md
@@ -1629,7 +1629,19 @@ public class XmlAdaptedTask {
             }
         }
     }
-
+    
+    public void setTaskListSize(int size) {
+        taskListSize = size;
+    }
+    
+```
+###### \java\seedu\tasklist\ui\UiManager.java
+``` java
+    @Subscribe
+    public void handleTaskListChangedEvent(TaskListChangedEvent tlce) {
+        mainWindow.getTaskListPanel().setTaskListSize(tlce.data.getTaskList().size());
+    }
+}
 ```
 ###### \resources\view\MainWindow.fxml
 ``` fxml
